--- a/FrontEnd/unsplash/package.json
+++ b/FrontEnd/unsplash/package.json
@@ -12,6 +12,8 @@
     "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
+    "react-images-uploading": "^3.1.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
