--- a/FrontEnd/unsplash/package.json
+++ b/FrontEnd/unsplash/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "font-awesome": "^4.7.0",
+    "masonry-layout": "^4.2.2",
     "react": "^17.0.1",
+    "react-cool-img": "^1.2.9",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
     "react-images-uploading": "^3.1.2",
+    "react-responsive-masonry": "^2.1.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
